--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -48,11 +48,11 @@ _1k_HZ_ticks=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.2
-_minor=20
+_minor=21
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.2.20.lqx1.r0.gb1a710724940
-pkgrel=2
+pkgver=5.2.21.lqx1.r0.g833da2335207
+pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
 license=('GPL2')
