--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -49,9 +49,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.2
 _minor=21
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.2.21.lqx1.r0.g833da2335207
+pkgver=5.2.21.lqx2.r0.g458e5d1d3d6c
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
