--- a/aur-rebased/linux-zen-git/PKGBUILD
+++ b/aur-rebased/linux-zen-git/PKGBUILD
@@ -46,8 +46,8 @@ pkgbase=linux-zen-git
 # pkgname=('linux-zen-git' 'linux-zen-git-headers' 'linux-zen-git-docs')
 _major=5.3
 _srcname=zen-kernel
-pkgver=5.3.7.r858562.g5bb92ae820ba
-pkgrel=3
+pkgver=5.3.8.r858760.g0f042ce07122
+pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
 license=('GPL2')
@@ -352,7 +352,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'd9d3c0e3b4c68a628e48e1a0a9c47e06749e390f06e6f1e440755b743f5e32b70cb79c0cdf590be7619fa3c0875558d96464c5d8268bdc1ae5e5fc7442d1217b'
+            '1ee542fed6194b56d3785781701b711389dd5d50135c843b1d38ef7c5fd6a3d976ddff3beb22bcac68d4b1902004a741a8c027a0b2a00552ba63da4844cb1ec3'
             '6b57a66b870b2f525e2dedd8f224b89474fd4ec6ea18484b0a67a1a2b9a4fc95d025cac181504406ea42a35d6c1b184c0d4e38c92815022935fc55746c69c7c1'
             '2718b58dbbb15063bacb2bde6489e5b3c59afac4c0e0435b97fe720d42c711b6bcba926f67a8687878bd51373c9cf3adb1915a11666d79ccb220bf36e0788ab7'
             '8742e2eed421e2f29850e18616f435536c12036ff793f5682a3a8c980cf5dbfc88d17fd9539c87de15d9e4663dc3190f964f18a4722940465437927b6052abbf'
