--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,10 +46,10 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.3
 _minor=8
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.3.8.lqx1.r0.gcda59226b8ad
-pkgrel=2
+pkgver=5.3.8.lqx2.r0.g070c86bcae5f
+pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
 license=('GPL2')
