--- a/aur-rebased/linux-zen-git/PKGBUILD
+++ b/aur-rebased/linux-zen-git/PKGBUILD
@@ -47,7 +47,7 @@ pkgbase=linux-zen-git
 _major=5.3
 _srcname=zen-kernel
 pkgver=5.3.8.r858760.g0f042ce07122
-pkgrel=4
+pkgrel=5
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
 license=('GPL2')
@@ -63,7 +63,7 @@ source=("git://github.com/zen-kernel/zen-kernel#branch=${_major}/master"
 
 export KBUILD_BUILD_HOST=archlinux
 export KBUILD_BUILD_USER=$pkgbase
-export KBUILD_BUILD_TIMESTAMP="@${SOURCE_DATE_EPOCH:-$(date +%s)}"
+export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EPOCH})"
 
 pkgver() {
   cd $_srcname
