--- a/aur-rebased/linux-zen-git/PKGBUILD
+++ b/aur-rebased/linux-zen-git/PKGBUILD
@@ -46,8 +46,9 @@ pkgbase=linux-zen-git
 # pkgname=('linux-zen-git' 'linux-zen-git-headers' 'linux-zen-git-docs')
 _major=5.3
 _srcname=zen-kernel
-pkgver=5.3.8.r858760.g0f042ce07122
-pkgrel=5
+pkgver=5.3.9.r858932.ge52a810f87ca
+pkgrel=1
+pkgdesc='Linux ZEN'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
 license=('GPL2')
@@ -170,7 +171,7 @@ build() {
 }
 
 _package() {
-    pkgdesc="The ${pkgbase/linux/Linux} kernel and modules"
+    pkgdesc="The $pkgdesc kernel and modules"
     depends=('coreutils' 'kmod' 'initramfs')
     optdepends=('crda: to set the correct wireless channels of your country'
                 'linux-firmware: firmware images needed for some devices'
@@ -199,7 +200,7 @@ _package() {
 }
 
 _package-headers() {
-    pkgdesc="Header files and scripts for building modules for ${pkgbase/linux/Linux} kernel"
+    pkgdesc="Headers and scripts for building modules for the $pkgdesc kernel"
     depends=('linux-zen-git')
 
   cd $_srcname
@@ -278,7 +279,7 @@ _package-headers() {
 }
 
 _package-docs() {
-    pkgdesc="Kernel hackers manual - HTML documentation that comes with the ${pkgbase/linux/Linux} kernel"
+    pkgdesc="Kernel hacker's manual for the $pkgdesc kernel"
     depends=('linux-zen-git')
 
   cd $_srcname
@@ -288,8 +289,8 @@ _package-docs() {
   mkdir -p "$builddir"
   cp -t "$builddir" -a Documentation
 
-  msg2 "Removing doctrees..."
-  rm -r "$builddir/Documentation/output/.doctrees"
+  msg2 "Removing unneeded files..."
+  rm -rv "$builddir"/Documentation/{,output/}.[^.]*
 
   msg2 "Moving HTML docs..."
   local src dst
