--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,11 +45,11 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.3
-_minor=8
-_lqx=lqx2
+_minor=9
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.3.8.lqx2.r0.g070c86bcae5f
-pkgrel=3
+pkgver=5.3.9.lqx1.r0.g0522465d0a61
+pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
