--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.3
-_minor=9
+_minor=10
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.3.9.lqx1.r0.g0522465d0a61
+pkgver=5.3.10.lqx1.r0.gbaab5bcd93c8
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
