--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.3
-_minor=11
-_lqx=lqx2
+_minor=12
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.3.11.lqx2.r0.g1c075c683113
+pkgver=5.3.12.lqx1.r0.gf74be62ead2e
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
