--- a/linux-lqx-rebranded/linux-lqx-tag-git/config
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.3.11-lqx1 Kernel Configuration
+# Linux/x86 5.3.12-lqx1 Kernel Configuration
 #
 
 #
@@ -6665,7 +6665,7 @@ CONFIG_AC97_BUS=m
 #
 # HID support
 #
-CONFIG_HID=y
+CONFIG_HID=m
 # CONFIG_HID_BATTERY_STRENGTH is not set
 CONFIG_HIDRAW=y
 CONFIG_UHID=m
@@ -6674,33 +6674,33 @@ CONFIG_HID_GENERIC=m
 #
 # Special HID drivers
 #
-CONFIG_HID_A4TECH=y
+CONFIG_HID_A4TECH=m
 CONFIG_HID_ACCUTOUCH=m
 CONFIG_HID_ACRUX=m
 CONFIG_HID_ACRUX_FF=y
-CONFIG_HID_APPLE=y
+CONFIG_HID_APPLE=m
 CONFIG_HID_APPLEIR=m
 CONFIG_HID_ASUS=m
 CONFIG_HID_AUREAL=m
-CONFIG_HID_BELKIN=y
+CONFIG_HID_BELKIN=m
 CONFIG_HID_BETOP_FF=m
 CONFIG_HID_BIGBEN_FF=m
-CONFIG_HID_CHERRY=y
-CONFIG_HID_CHICONY=y
+CONFIG_HID_CHERRY=m
+CONFIG_HID_CHICONY=m
 CONFIG_HID_CORSAIR=m
 CONFIG_HID_COUGAR=m
 CONFIG_HID_MACALLY=m
 CONFIG_HID_PRODIKEYS=m
 CONFIG_HID_CMEDIA=m
 CONFIG_HID_CP2112=m
-CONFIG_HID_CYPRESS=y
+CONFIG_HID_CYPRESS=m
 CONFIG_HID_DRAGONRISE=m
 CONFIG_DRAGONRISE_FF=y
 CONFIG_HID_EMS_FF=m
 CONFIG_HID_ELAN=m
 CONFIG_HID_ELECOM=m
 CONFIG_HID_ELO=m
-CONFIG_HID_EZKEY=y
+CONFIG_HID_EZKEY=m
 CONFIG_HID_GEMBIRD=m
 CONFIG_HID_GFRM=m
 CONFIG_HID_HOLTEK=m
@@ -6717,11 +6717,11 @@ CONFIG_HID_ICADE=m
 CONFIG_HID_ITE=m
 CONFIG_HID_JABRA=m
 CONFIG_HID_TWINHAN=m
-CONFIG_HID_KENSINGTON=y
+CONFIG_HID_KENSINGTON=m
 CONFIG_HID_LCPOWER=m
 CONFIG_HID_LED=m
 CONFIG_HID_LENOVO=m
-CONFIG_HID_LOGITECH=y
+CONFIG_HID_LOGITECH=m
 CONFIG_HID_LOGITECH_DJ=m
 CONFIG_HID_LOGITECH_HIDPP=m
 CONFIG_LOGITECH_FF=y
@@ -6732,8 +6732,8 @@ CONFIG_HID_MAGICMOUSE=m
 CONFIG_HID_MALTRON=m
 CONFIG_HID_MAYFLASH=m
 CONFIG_HID_REDRAGON=m
-CONFIG_HID_MICROSOFT=y
-CONFIG_HID_MONTEREY=y
+CONFIG_HID_MICROSOFT=m
+CONFIG_HID_MONTEREY=m
 CONFIG_HID_MULTITOUCH=m
 CONFIG_HID_NTI=m
 CONFIG_HID_NTRIG=m
