--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -44,12 +44,12 @@ _use_current=
 
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
-_major=5.4
-_minor=1
+_major=5.3
+_minor=14
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.4.1.lqx1.r0.g873faeb4dd0b
-pkgrel=2
+pkgver=5.3.14.lqx1.r0.g31ef09898394
+pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
@@ -309,4 +309,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '8664f56aab660eef55713cf728220d353d6cab1fdeede286b84ef75adea27fdd80fc05005c9961bdd02aa0896a0769e825747fd1c8a2cde905d1084ac929c10e')
+            'a3b7d858d82253a1bf1c21cc63a79c575a86db2c203e0a2811179a9c5e70194d65a38cc34b8fe55982df99c2220746ee6a138930bcb3d95cb9169aaf8e8ba578')
