--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.3
-_minor=15
+_minor=16
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.3.15.lqx1.r0.gf7b39783ea43
+pkgver=5.3.16.lqx1.r0.g7a2f38bb45af
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
