--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.3
 _minor=16
-_lqx=lqx2
+_lqx=lqx3
 _srcname=zen-kernel
-pkgver=5.3.16.lqx2.r0.g394094c478a3
+pkgver=5.3.16.lqx3.r0.gfa55edf33fe7
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
