--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,11 +45,11 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.4
-_minor=5
+_minor=6
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.4.5.lqx1.r0.g1fca65c94bf4
-pkgrel=2
+pkgver=5.4.6.lqx1.r0.ga8f2cf72f480
+pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
