--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.4
-_minor=8
-_lqx=lqx2
+_minor=10
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.4.8.lqx2.r0.g50f29d77f1d2
+pkgver=5.4.10.lqx1.r0.g683f3ba183c3
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
