--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.4
 _minor=11
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.4.11.lqx1.r0.g061aa995491c
+pkgver=5.4.11.lqx2.r0.g287e724dec58
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
