--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.4
-_minor=12
+_minor=13
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.4.12.lqx1.r0.g12b2a8a16853
+pkgver=5.4.13.lqx1.r0.gc88c110f76d5
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
