--- a/linux-lqx-rebranded/linux-lqx-tag/config
+++ b/linux-lqx-rebranded/linux-lqx-tag/config
@@ -1,9 +1,4 @@
 #
-# Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.4.13-lqx2 Kernel Configuration
-#
-
-#
 # Compiler: gcc (GCC) 9.2.0
 #
 CONFIG_CC_IS_GCC=y
@@ -107,8 +102,7 @@ CONFIG_PREEMPTION=y
 #
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
-CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_HAVE_SCHED_AVG_IRQ=y
+# CONFIG_IRQ_TIME_ACCOUNTING is not set
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
 CONFIG_TASKSTATS=y
@@ -468,10 +462,10 @@ CONFIG_EFI_STUB=y
 CONFIG_EFI_MIXED=y
 CONFIG_SECCOMP=y
 # CONFIG_HZ_100 is not set
-# CONFIG_HZ_250 is not set
+CONFIG_HZ_250=y
 # CONFIG_HZ_300 is not set
-CONFIG_HZ_1000=y
-CONFIG_HZ=1000
+# CONFIG_HZ_1000 is not set
+CONFIG_HZ=250
 CONFIG_SCHED_HRTICK=y
 CONFIG_KEXEC=y
 # CONFIG_KEXEC_FILE is not set
@@ -7916,7 +7910,7 @@ CONFIG_UWB=m
 CONFIG_UWB_HWA=m
 CONFIG_UWB_WHCI=m
 CONFIG_UWB_I1480U=m
-CONFIG_EXFAT_FS=m
+CONFIG_EXFAT_FS_SAMSUNG=m
 # CONFIG_EXFAT_DONT_MOUNT_VFAT is not set
 CONFIG_EXFAT_DISCARD=y
 # CONFIG_EXFAT_DELAYED_SYNC is not set
@@ -8939,7 +8933,7 @@ CONFIG_UDF_FS=m
 # end of CD-ROM/DVD Filesystems
 
 #
-# DOS/FAT/NT Filesystems
+# DOS/FAT/EXFAT/NT Filesystems
 #
 CONFIG_FAT_FS=m
 CONFIG_MSDOS_FS=m
@@ -8950,7 +8944,7 @@ CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_NTFS_FS=m
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
-# end of DOS/FAT/NT Filesystems
+# end of DOS/FAT/EXFAT/NT Filesystems
 
 #
 # Pseudo filesystems
