--- a/linux-5.5rc/linux-aufs/PKGBUILD
+++ b/linux-5.5rc/linux-aufs/PKGBUILD
@@ -48,12 +48,10 @@ _1k_HZ_ticks=
 pkgbase=linux-aufs
 # pkgname=('linux-aufs' 'linux-aufs-headers' 'linux-aufs-docs')
 _major=5.5
-_major_rc=5.5-rc
-_minor=rc7
-_tag=v5.5-${_minor}
-pkgver=${_major}${_minor}
+_tag=v${_major}
+pkgver=${_major}
 _srcname=linux
-pkgrel=3
+pkgrel=1
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -61,10 +59,10 @@ license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'bc' 'libelf' 'python-sphinx' 'python-sphinx_rtd_theme'
              'graphviz' 'imagemagick')
-#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major_rc}"
-_lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major_rc}"
+#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
+_lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 _aufs_path="aufs-patches"
-_aufs_ver="20200120"
+_aufs_ver="20200127"
 _aufs_patch="0001-aufs-${_aufs_ver}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
@@ -325,9 +323,9 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'b04f7253b268d8eae78952db5357c2c73a2ec2bf449ea15f2ef20f68d1108761e116e524ddd5337ed28034f9af071221de086da66b2ad25c6a0634494aa04386'
+            '1fb068a7099807a935d7353bb1621e0c04bf03c79a6ba5aae094510e9a8569ef1a71971664b162783bfb85f36946a423c239a6a51b6e7e6dde7b9e5150730c54'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
-            'e7453711a5483f3f9801302d8cd374403c6205570a7c28167180d27681fe019578f06ed39124b37a01e4898d684170663cb914f3f40780f458007d7f16f4f2d4'
+            '1ed27e54b864536fba7262830b4e01a6aec76b45391ee533728f678f0c3b73829a2f3770a5c72022de672babbd4acafdea42fa73892195cb783e736fa2c89c43'
             '27e19ff92804fdf867edef23bbdd8eaeade27273151fa2fee4db5ab1840a0d08e668c25654917017fb1dfc79b0416b0af2fdfe485c57437b20c3f857299d068a')
 
 validpgpkeys=(
