--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.4
-_minor=16
+_minor=17
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.4.16.lqx1.r0.g9c838fd91930
+pkgver=5.4.17.lqx1.r0.g016a0fe2fb89
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
